# dre-dimura

./: .gitignore  .gitmodules  CMakeLists.txt
Resources/WebUI/: index.html
Resources/WebUI/assets/: index.css  index.js
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PreampDSP.cpp  PreampDSP.h
Source/Effects/: EffectsDSP.cpp  EffectsDSP.h
web-ui/: package-lock.json  package.json
web-ui/src/: App.tsx  index.css
web-ui/src/components/: EffectModule.tsx  Fader.tsx  Knob.tsx  VUMeter.tsx
web-ui/src/components/artwork/: GoldenTapeArt.tsx  HearthglowBackground.tsx  ModuleArtwork.tsx  NightfallBackground.tsx  SteelplateBackground.tsx
web-ui/src/components/modules/: EP3Module.tsx  FXModule.tsx  RE201Module.tsx  SchafferModule.tsx  TascamModule.tsx
web-ui/src/hooks/: useAudioLevels.ts  useJuceParam.ts
